--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 #header{
     width: auto;
     height: 100vh;
-    background-image: url(/image/background.png);
+    background-image: url(image/background.png);
     background-size: cover;
     background-position: center;
 }
