--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ title h1{
 }
 
 #aboutUs {
-    padding: 80px 0;
+    padding: 80px 80px;
     color: #ababab;
     background: #121212;
     background-size: cover;
