--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     color: #fff;
 }
 #header{
-    width: auto;
+    width: 100%;
     height: 100vh;
     background-image: url(background.png);
     background-size: cover;
@@ -337,7 +337,7 @@ nav.fas{
     }
     
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
     #crossIcon{
         display: none;
     }
