--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0;
+    margin: 0px 10px;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
@@ -16,11 +16,12 @@ body{
     background-position: center;
 }
 .container{
-    padding-left: 10%;
+    padding: 0;
 }
 nav{
     display: flex;
-    align-items: center;
+    margin-top: 0;
+    align-items: right;
     justify-content: space-between;
     flex-wrap: wrap;
     position: fixed;
@@ -30,6 +31,7 @@ nav{
 }
 .logo{
     width: 140px;
+    margin-left: 5px;
 }
 nav ul li{
     display: inline-block;
@@ -94,7 +96,9 @@ title h1{
     flex-wrap: wrap;
 }
 .about-col{
-    flex-basis: 60%;
+    flex-basis: 80%;
+    display: flex;
+    align-items: center;
 }
 .subtitle{
     font-size: 60px;
@@ -291,7 +295,7 @@ form btn{
 .copyright{
     width: 100%;
     text-align: center;
-    padding: 25px 0;
+    display: flex;
     font-weight: 300;
     margin-top: 20px;
 }
@@ -300,6 +304,14 @@ nav.fas{
 }
 
 @media only screen and (max-width: 600px){
+    #header{
+        width: 100%;
+        height: 100vh;
+        background-image: url(background.png);
+        background-size: cover;
+        background-position: center;
+    }
+    
     nav i{
         display: block;
         position: fixed;
@@ -334,6 +346,14 @@ nav.fas{
     }
     nav ul i{
         cursor: pointer;
+    }
+    .contactLeft{
+        flex-basis: 80%;
+        align-items: center;
+    }
+    .contactRight{
+        flex-basis: 80%;
+        align-items: center;
     }
     
 }
