--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 nav{
     display: flex;
-    margin-top: 0;
+    margin-top: 0px;
     align-items: right;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -31,7 +31,6 @@ nav{
 }
 .logo{
     width: 140px;
-    margin-left: 5px;
 }
 nav ul li{
     display: inline-block;
@@ -83,7 +82,6 @@ title h1{
 }
 
 #aboutUs {
-    margin-right: 50px;
     padding: 80px;
     color: #ababab;
     background: #121212;
@@ -93,7 +91,6 @@ title h1{
 .row{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 .about-col{
     flex-basis: 80%;
