--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     color: #fff;
 }
 #header{
+    margin: 0px 0px;
     width: 100%;
     height: 100vh;
     background-image: url(background.png);
@@ -21,20 +22,22 @@ body{
 nav{
     display: flex;
     margin-top: 0px;
+    background-color: rgba(18, 18, 18, 0.8);
+    background-size: 25px;
 }
 #sidemenu{
     align-items: right;
     justify-content: space-between;
     flex-wrap: wrap;
     position: fixed;
-    background-color: rgba(18, 18, 18, 0.8);
-    background-size: 25px;
+    margin-top: 5px
     z-index: 999;
 }
 .logo{
     width: 140px;
     align-items: left;
-    margin-left: 0px;
+    margin-top: 5px;
+    margin-left: -10px;
 }
 nav ul li{
     display: inline-block;
@@ -86,7 +89,7 @@ title h1{
 }
 
 #aboutUs {
-    padding: 80px;
+    padding: 30px 0;
     color: #ababab;
     background: #121212;
     background-size: cover;
@@ -97,6 +100,7 @@ title h1{
     justify-content: space-between;
 }
 .about{
+    margin-bottom: 10px;
     display: flex;
 }
 .subtitle{
@@ -105,7 +109,7 @@ title h1{
     color: #fff;
 }
 .about p{
-    line-height: 1.5;
+    line-height: 2.0;
     word-spacing: 0.5;
     text-align: justify;
 }
@@ -133,6 +137,7 @@ title h1{
     width: 50%;
 }
 .tabContents h1{
+    margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
     color: #fff;
@@ -206,6 +211,9 @@ title h1{
     display: inline-block;
 }
 
+#pastProjects {
+    padding: 30px 0;
+}
 .year{
     margin-top: 10px;
     line-height: 1.5px;
@@ -305,6 +313,12 @@ nav.fas{
 }
 
 @media only screen and (max-width: 600px){
+    *{
+        margin: 0px 5px;
+        padding: 0;
+        font-family: 'Poppins', sans-serif;
+        box-sizing: border-box;
+    }
     #header{
         width: 100%;
         height: 100vh;
