--- a/style.css
+++ b/style.css
@@ -315,7 +315,8 @@ nav.fas{
 
 @media only screen and (max-width: 600px){
     *{
-        margin: 0px 5px;
+        margin: auto;
+        width: 100%;
         padding: 0;
         font-family: 'Poppins', sans-serif;
         box-sizing: border-box;
